--- a/final_analysis.ipynb
+++ b/final_analysis.ipynb
@@ -136,24 +136,28 @@
     "            self.vectorizer.vocabulary_[word] for word in self.used_function_words\n",
     "        ]\n",
     "\n",
-    "        # Fit z-score scaler to the relative frequencies\n",
+    "        # Calculate the relative frequencies\n",
     "        relative_freqs = word_counts / word_counts.sum(axis=1, keepdims=True)\n",
+    "\n",
+    "        # Fit the z-score scaler\n",
     "        self.scaler.fit(relative_freqs)\n",
+    "\n",
     "        return self\n",
     "\n",
-    "    def transform(self, X):\n",
+    "    def transform(self, X, z_score=True):\n",
     "        # Transform the corpus into word counts\n",
     "        word_counts = self.vectorizer.transform(X).toarray()\n",
     "\n",
     "        # Calculate the relative frequencies\n",
     "        relative_freqs = word_counts / word_counts.sum(axis=1, keepdims=True)\n",
     "\n",
+    "        if not z_score:\n",
+    "            return relative_freqs[:, self.used_function_words_indices]\n",
+    "\n",
     "        # Calculate the z-scores\n",
-    "        z_scores = self.scaler.transform(relative_freqs)[\n",
+    "        return self.scaler.transform(relative_freqs)[\n",
     "            :, self.used_function_words_indices\n",
     "        ]\n",
-    "\n",
-    "        return z_scores\n",
     "\n",
     "    def get_used_function_words(self):\n",
     "        return self.used_function_words"
@@ -481,7 +485,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LLMS experiments ranked by the frequency of confusing the LLM for the human:\n"
+      "LLM experiments ranked by the frequency of confusing the LLM for the human:\n"
      ]
     },
     {
@@ -507,7 +511,7 @@
     "    df_cms[df_cms[\"author1\"] == HUMAN].drop(columns=\"author1\").groupby(\"author2\").mean()\n",
     ")\n",
     "\n",
-    "print(\"LLMS experiments ranked by the frequency of confusing the LLM for the human:\")\n",
+    "print(\"LLM experiments ranked by the frequency of confusing the LLM for the human:\")\n",
     "human_experiments[\"one_zero\"].sort_values(ascending=False)"
    ]
   },
@@ -520,7 +524,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LLMS experiments ranked by the frequency of confusing the human for the LLM:\n"
+      "LLM experiments ranked by the frequency of confusing the human for the LLM:\n"
      ]
     },
     {
@@ -542,7 +546,7 @@
     }
    ],
    "source": [
-    "print(\"LLMS experiments ranked by the frequency of confusing the human for the LLM:\")\n",
+    "print(\"LLM experiments ranked by the frequency of confusing the human for the LLM:\")\n",
     "human_experiments[\"zero_one\"].sort_values(ascending=False)"
    ]
   },
@@ -982,16 +986,162 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### todo"
+    "# Variance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "z_scores_df = pd.DataFrame(z_scores, index=df[\"author\"])"
+    "unnormalized = z_scores_transformer.fit(df[\"text\"]).transform(df[\"text\"], z_score=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ensure that the z-scores are the same as the StandardScaler on the unnormalized feature vectors\n",
+    "assert np.max(StandardScaler().fit_transform(unnormalized) - z_scores) < 1e-10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The distance from the universal centroid of the average vector, average of element-wise (unnormalized):\n",
+      "author\n",
+      "human                       0.000714\n",
+      "gpt-3.5-turbo-0125          0.000363\n",
+      "gemini-1.5-pro-latest       0.000315\n",
+      "gemini-1.0-pro              0.000313\n",
+      "gpt-4-turbo-2024-04-09      0.000254\n",
+      "claude-3-sonnet-20240229    0.000199\n",
+      "claude-3-opus-20240229      0.000187\n",
+      "dtype: float64 \n",
+      "\n",
+      "The Euclidean distance of the average from the universal centroid (unnormalized):\n",
+      "author\n",
+      "human                       0.028542\n",
+      "gpt-3.5-turbo-0125          0.015391\n",
+      "gemini-1.5-pro-latest       0.012507\n",
+      "gemini-1.0-pro              0.011647\n",
+      "gpt-4-turbo-2024-04-09      0.008786\n",
+      "claude-3-opus-20240229      0.007653\n",
+      "claude-3-sonnet-20240229    0.006135\n",
+      "dtype: float64 \n",
+      "\n",
+      "The cosine distance between the average and the universal centroid (unnormalized):\n",
+      "author\n",
+      "human                       0.052774\n",
+      "gemini-1.5-pro-latest       0.008931\n",
+      "gpt-3.5-turbo-0125          0.006746\n",
+      "gemini-1.0-pro              0.005987\n",
+      "gpt-4-turbo-2024-04-09      0.005147\n",
+      "claude-3-opus-20240229      0.003888\n",
+      "claude-3-sonnet-20240229    0.002237\n",
+      "dtype: float64 \n",
+      "\n",
+      "The distance from the universal centroid of the average vector, average of element-wise (z-scores):\n",
+      "author\n",
+      "human                       0.213904\n",
+      "gemini-1.0-pro              0.108582\n",
+      "gpt-3.5-turbo-0125          0.107867\n",
+      "gemini-1.5-pro-latest       0.100212\n",
+      "gpt-4-turbo-2024-04-09      0.095052\n",
+      "claude-3-sonnet-20240229    0.078454\n",
+      "claude-3-opus-20240229      0.064322\n",
+      "dtype: float64 \n",
+      "\n",
+      "The Euclidean distance of the average from the universal centroid (z-scores):\n",
+      "author\n",
+      "human                       4.566826\n",
+      "gpt-3.5-turbo-0125          2.349404\n",
+      "gemini-1.0-pro              2.342910\n",
+      "gemini-1.5-pro-latest       2.080608\n",
+      "gpt-4-turbo-2024-04-09      2.010987\n",
+      "claude-3-sonnet-20240229    1.859256\n",
+      "claude-3-opus-20240229      1.372655\n",
+      "dtype: float64 \n",
+      "\n",
+      "The cosine distance between the average and the universal centroid (z-scores):\n",
+      "author\n",
+      "gpt-3.5-turbo-0125          1.188693\n",
+      "gemini-1.0-pro              1.162699\n",
+      "gpt-4-turbo-2024-04-09      1.023045\n",
+      "claude-3-opus-20240229      0.985346\n",
+      "human                       0.926182\n",
+      "claude-3-sonnet-20240229    0.888634\n",
+      "gemini-1.5-pro-latest       0.852657\n",
+      "dtype: float64 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "unnormalized_df = pd.DataFrame(unnormalized, index=df[\"author\"])\n",
+    "z_scores_df = pd.DataFrame(z_scores, index=df[\"author\"])\n",
+    "\n",
+    "df_dict = {\"unnormalized\": unnormalized_df, \"z-scores\": z_scores_df}\n",
+    "\n",
+    "for name, df_cur in df_dict.items():\n",
+    "    universal_centroid = df_cur.mean()\n",
+    "    grouped = df_cur.groupby(\"author\").mean()\n",
+    "    authors = grouped.index\n",
+    "\n",
+    "    pw_distances = np.abs(grouped - universal_centroid)\n",
+    "    pw_distances = pw_distances.mean(axis=1)\n",
+    "    print(\n",
+    "        f\"The distance from the universal centroid of the average vector, average of element-wise ({name}):\"\n",
+    "    )\n",
+    "    print(pw_distances.sort_values(ascending=False), \"\\n\")\n",
+    "\n",
+    "    euclidian_distances = np.linalg.norm(grouped - universal_centroid, axis=1)\n",
+    "    euclidian_distances = pd.Series(euclidian_distances, index=authors)\n",
+    "    print(\n",
+    "        f\"The Euclidean distance of the average from the universal centroid ({name}):\"\n",
+    "    )\n",
+    "    print(euclidian_distances.sort_values(ascending=False), \"\\n\")\n",
+    "\n",
+    "    # now for cosine distance\n",
+    "    cosine_distances = []\n",
+    "    for _, row in grouped.iterrows():\n",
+    "        row = np.array(row).reshape(1, -1)\n",
+    "        uc = np.array(universal_centroid).reshape(1, -1)\n",
+    "        cosine_distances.append(1 - cosine_similarity(row, uc).item())\n",
+    "    cosine_distances = pd.Series(cosine_distances, index=authors)\n",
+    "    print(\n",
+    "        f\"The cosine distance between the average and the universal centroid ({name}):\"\n",
+    "    )\n",
+    "    print(cosine_distances.sort_values(ascending=False), \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.18259485]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cosine_similarity([[0, 1, 2, 10]], [[1, 25, 1, 2]])"
    ]
   }
  ],
