--- a/final_analysis.ipynb
+++ b/final_analysis.ipynb
@@ -986,142 +986,218 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Variance"
+    "# Variability"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unnormalized = z_scores_transformer.fit(df[\"text\"]).transform(df[\"text\"], z_score=False)"
+    "unnormalized = z_scores_transformer.fit(df[\"text\"]).transform(df[\"text\"], z_score=False)\n",
+    "\n",
+    "# Ensure: z-scores == scaled(unnormalized feature vectors)\n",
+    "assert np.max(StandardScaler().fit_transform(unnormalized) - z_scores) < 1e-10\n",
+    "z_scores_df = pd.DataFrame(z_scores, index=df[\"author\"])\n",
+    "unnormalized_df = pd.DataFrame(unnormalized, index=df[\"author\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Ensure that the z-scores are the same as the StandardScaler on the unnormalized feature vectors\n",
-    "assert np.max(StandardScaler().fit_transform(unnormalized) - z_scores) < 1e-10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The distance from the universal centroid of the average vector, average of element-wise (unnormalized):\n",
-      "author\n",
-      "human                       0.000714\n",
-      "gpt-3.5-turbo-0125          0.000363\n",
-      "gemini-1.5-pro-latest       0.000315\n",
-      "gemini-1.0-pro              0.000313\n",
-      "gpt-4-turbo-2024-04-09      0.000254\n",
-      "claude-3-sonnet-20240229    0.000199\n",
-      "claude-3-opus-20240229      0.000187\n",
-      "dtype: float64 \n",
-      "\n",
-      "The Euclidean distance of the average from the universal centroid (unnormalized):\n",
-      "author\n",
-      "human                       0.028542\n",
-      "gpt-3.5-turbo-0125          0.015391\n",
-      "gemini-1.5-pro-latest       0.012507\n",
-      "gemini-1.0-pro              0.011647\n",
-      "gpt-4-turbo-2024-04-09      0.008786\n",
-      "claude-3-opus-20240229      0.007653\n",
-      "claude-3-sonnet-20240229    0.006135\n",
-      "dtype: float64 \n",
-      "\n",
-      "The cosine distance between the average and the universal centroid (unnormalized):\n",
-      "author\n",
-      "human                       0.052774\n",
-      "gemini-1.5-pro-latest       0.008931\n",
-      "gpt-3.5-turbo-0125          0.006746\n",
-      "gemini-1.0-pro              0.005987\n",
-      "gpt-4-turbo-2024-04-09      0.005147\n",
-      "claude-3-opus-20240229      0.003888\n",
-      "claude-3-sonnet-20240229    0.002237\n",
-      "dtype: float64 \n",
-      "\n",
-      "The distance from the universal centroid of the average vector, average of element-wise (z-scores):\n",
-      "author\n",
-      "human                       0.213904\n",
-      "gemini-1.0-pro              0.108582\n",
-      "gpt-3.5-turbo-0125          0.107867\n",
-      "gemini-1.5-pro-latest       0.100212\n",
-      "gpt-4-turbo-2024-04-09      0.095052\n",
-      "claude-3-sonnet-20240229    0.078454\n",
-      "claude-3-opus-20240229      0.064322\n",
-      "dtype: float64 \n",
-      "\n",
-      "The Euclidean distance of the average from the universal centroid (z-scores):\n",
-      "author\n",
-      "human                       4.566826\n",
-      "gpt-3.5-turbo-0125          2.349404\n",
-      "gemini-1.0-pro              2.342910\n",
-      "gemini-1.5-pro-latest       2.080608\n",
-      "gpt-4-turbo-2024-04-09      2.010987\n",
-      "claude-3-sonnet-20240229    1.859256\n",
-      "claude-3-opus-20240229      1.372655\n",
-      "dtype: float64 \n",
-      "\n",
-      "The cosine distance between the average and the universal centroid (z-scores):\n",
-      "author\n",
-      "gpt-3.5-turbo-0125          1.188693\n",
-      "gemini-1.0-pro              1.162699\n",
-      "gpt-4-turbo-2024-04-09      1.023045\n",
-      "claude-3-opus-20240229      0.985346\n",
-      "human                       0.926182\n",
-      "claude-3-sonnet-20240229    0.888634\n",
-      "gemini-1.5-pro-latest       0.852657\n",
-      "dtype: float64 \n",
-      "\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Z-Scores</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Unnormalized</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>element-wise-average distance</th>\n",
+       "      <th>euclidian distance</th>\n",
+       "      <th>cosine distance</th>\n",
+       "      <th>element-wise-average distance</th>\n",
+       "      <th>euclidian distance</th>\n",
+       "      <th>cosine distance</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>author</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>claude-3-opus-20240229</th>\n",
+       "      <td>0.447142</td>\n",
+       "      <td>13.155051</td>\n",
+       "      <td>0.903062</td>\n",
+       "      <td>0.001385</td>\n",
+       "      <td>0.054888</td>\n",
+       "      <td>0.159059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>claude-3-sonnet-20240229</th>\n",
+       "      <td>0.471056</td>\n",
+       "      <td>14.340473</td>\n",
+       "      <td>0.882782</td>\n",
+       "      <td>0.001420</td>\n",
+       "      <td>0.056545</td>\n",
+       "      <td>0.168349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gemini-1.0-pro</th>\n",
+       "      <td>0.380644</td>\n",
+       "      <td>12.503603</td>\n",
+       "      <td>0.797152</td>\n",
+       "      <td>0.001317</td>\n",
+       "      <td>0.056127</td>\n",
+       "      <td>0.142965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gemini-1.5-pro-latest</th>\n",
+       "      <td>0.381186</td>\n",
+       "      <td>11.998472</td>\n",
+       "      <td>0.809691</td>\n",
+       "      <td>0.001204</td>\n",
+       "      <td>0.048869</td>\n",
+       "      <td>0.119705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gpt-3.5-turbo-0125</th>\n",
+       "      <td>0.424417</td>\n",
+       "      <td>14.329751</td>\n",
+       "      <td>0.813542</td>\n",
+       "      <td>0.001443</td>\n",
+       "      <td>0.063614</td>\n",
+       "      <td>0.164636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gpt-4-turbo-2024-04-09</th>\n",
+       "      <td>0.430161</td>\n",
+       "      <td>13.255438</td>\n",
+       "      <td>0.838384</td>\n",
+       "      <td>0.001171</td>\n",
+       "      <td>0.045552</td>\n",
+       "      <td>0.114088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>human</th>\n",
+       "      <td>0.599044</td>\n",
+       "      <td>20.437783</td>\n",
+       "      <td>0.771308</td>\n",
+       "      <td>0.001717</td>\n",
+       "      <td>0.067824</td>\n",
+       "      <td>0.242741</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              Z-Scores                     \\\n",
+       "                         element-wise-average distance euclidian distance   \n",
+       "author                                                                      \n",
+       "claude-3-opus-20240229                        0.447142          13.155051   \n",
+       "claude-3-sonnet-20240229                      0.471056          14.340473   \n",
+       "gemini-1.0-pro                                0.380644          12.503603   \n",
+       "gemini-1.5-pro-latest                         0.381186          11.998472   \n",
+       "gpt-3.5-turbo-0125                            0.424417          14.329751   \n",
+       "gpt-4-turbo-2024-04-09                        0.430161          13.255438   \n",
+       "human                                         0.599044          20.437783   \n",
+       "\n",
+       "                                                          Unnormalized  \\\n",
+       "                         cosine distance element-wise-average distance   \n",
+       "author                                                                   \n",
+       "claude-3-opus-20240229          0.903062                      0.001385   \n",
+       "claude-3-sonnet-20240229        0.882782                      0.001420   \n",
+       "gemini-1.0-pro                  0.797152                      0.001317   \n",
+       "gemini-1.5-pro-latest           0.809691                      0.001204   \n",
+       "gpt-3.5-turbo-0125              0.813542                      0.001443   \n",
+       "gpt-4-turbo-2024-04-09          0.838384                      0.001171   \n",
+       "human                           0.771308                      0.001717   \n",
+       "\n",
+       "                                                             \n",
+       "                         euclidian distance cosine distance  \n",
+       "author                                                       \n",
+       "claude-3-opus-20240229             0.054888        0.159059  \n",
+       "claude-3-sonnet-20240229           0.056545        0.168349  \n",
+       "gemini-1.0-pro                     0.056127        0.142965  \n",
+       "gemini-1.5-pro-latest              0.048869        0.119705  \n",
+       "gpt-3.5-turbo-0125                 0.063614        0.164636  \n",
+       "gpt-4-turbo-2024-04-09             0.045552        0.114088  \n",
+       "human                              0.067824        0.242741  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "unnormalized_df = pd.DataFrame(unnormalized, index=df[\"author\"])\n",
-    "z_scores_df = pd.DataFrame(z_scores, index=df[\"author\"])\n",
+    "from numpy.linalg import norm\n",
+    "from numpy import abs, mean\n",
     "\n",
-    "df_dict = {\"unnormalized\": unnormalized_df, \"z-scores\": z_scores_df}\n",
     "\n",
-    "for name, df_cur in df_dict.items():\n",
-    "    universal_centroid = df_cur.mean()\n",
-    "    grouped = df_cur.groupby(\"author\").mean()\n",
-    "    authors = grouped.index\n",
+    "def variability(feature_vectors: pd.DataFrame, distance_metric: str) -> pd.Series:\n",
+    "    grouped = feature_vectors.groupby(\"author\")\n",
     "\n",
-    "    pw_distances = np.abs(grouped - universal_centroid)\n",
-    "    pw_distances = pw_distances.mean(axis=1)\n",
-    "    print(\n",
-    "        f\"The distance from the universal centroid of the average vector, average of element-wise ({name}):\"\n",
-    "    )\n",
-    "    print(pw_distances.sort_values(ascending=False), \"\\n\")\n",
+    "    if distance_metric == \"element-wise-average\":\n",
+    "        # For each author: compute the mean distance from the centroid over the elements of the feature vectors\n",
+    "        return grouped.apply(lambda x: mean(abs(x - x.mean())))\n",
     "\n",
-    "    euclidian_distances = np.linalg.norm(grouped - universal_centroid, axis=1)\n",
-    "    euclidian_distances = pd.Series(euclidian_distances, index=authors)\n",
-    "    print(\n",
-    "        f\"The Euclidean distance of the average from the universal centroid ({name}):\"\n",
-    "    )\n",
-    "    print(euclidian_distances.sort_values(ascending=False), \"\\n\")\n",
+    "    elif distance_metric == \"euclidian\":\n",
+    "        # For each author: compute the average euclidian distance from the centroid\n",
+    "        return grouped.apply(lambda x: norm(x - x.mean(), axis=1).mean())\n",
+    "    elif distance_metric == \"cosine\":\n",
+    "        # For each author: compute the average cosine distance from the centroid\n",
+    "        return grouped.apply(lambda x: 1 - cosine_similarity(x, [x.mean()]).mean())\n",
+    "    else:\n",
+    "        raise ValueError(\"Invalid distance metric\")\n",
     "\n",
-    "    # now for cosine distance\n",
-    "    cosine_distances = []\n",
-    "    for _, row in grouped.iterrows():\n",
-    "        row = np.array(row).reshape(1, -1)\n",
-    "        uc = np.array(universal_centroid).reshape(1, -1)\n",
-    "        cosine_distances.append(1 - cosine_similarity(row, uc).item())\n",
-    "    cosine_distances = pd.Series(cosine_distances, index=authors)\n",
-    "    print(\n",
-    "        f\"The cosine distance between the average and the universal centroid ({name}):\"\n",
-    "    )\n",
-    "    print(cosine_distances.sort_values(ascending=False), \"\\n\")"
+    "    # Return a series with index as author and value as variability\n",
+    "\n",
+    "\n",
+    "distance_metrics = [\"element-wise-average\", \"euclidian\", \"cosine\"]\n",
+    "feature_vectors = {\"Z-Scores\": z_scores_df, \"Unnormalized\": unnormalized_df}\n",
+    "\n",
+    "results = {}\n",
+    "for feature_name, vectors_df in feature_vectors.items():\n",
+    "    for metric in distance_metrics:\n",
+    "        key = (feature_name, metric + \" distance\")\n",
+    "        results[key] = variability(vectors_df, metric)\n",
+    "\n",
+    "variability_df = pd.DataFrame(results)\n",
+    "variability_df"
    ]
   }
  ],
